Version 0.4.0

  * Add process::current_id().

  * Add temp_directory(), temp_path() utility functions.

Version 0.3.0

  * Add SHA256 hash calculator based on code from the FreeBSD project. That
    code is (naturally) licensed under the simplified/2-clause BSD license so
    the library is now MIT/BSD-licensed.

    Also add helper sha256_to_fingerprint() fingerprint_to_sha256() functions.

  * Add vector_view class template.

  * Add path::realize() (on POSIX calls realpath(3)), path::compare().

  * Recognize MSVC target triplet (*-microsoft-win32-msvcXX.Z).

  * Derive a target class from the target triplet for some targets. Currently
    the classes are: 'linux', 'macosx', 'freebsd', 'windows', and 'other'.

  * Add timestamp from_string().

  * Add combine_hash() utility function.

Version 0.2.0

  * First public release.